syntax = "proto3";

package inventory;

service InventoryService {
  rpc checkStock(StockRequest) returns (StockResponse);
  rpc updateStock(UpdateStockRequest) returns (UpdateStockResponse);
}

message StockRequest {
  int32 productId = 1;
}

message StockResponse {
  int32 stockLevel = 1;
}

message UpdateStockRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message UpdateStockResponse {
  int32 quantity = 1;
}
